--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-grid-system": "^2.5.0",
     "react-router": "^3.0.2"
   },
   "scripts": {
