--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-grid-system": "^2.5.0",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-three-renderer": "^3.0.2",
+    "three": "^0.82.1"
   },
   "scripts": {
     "start": "react-scripts start",
