--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "material-ui": "^0.17.0",
+    "randomstring": "^1.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-grid-system": "^2.5.0",
@@ -14,6 +15,7 @@
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-three-renderer": "^3.0.2",
+    "superagent": "^3.5.0",
     "three": "^0.82.1"
   },
   "scripts": {
